# balance-manager

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt  start-backend.sh  start-frontend.sh  start.sh
backend/: main.py
docs/: design.md  frontend-plan.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ManualEntryModal.tsx  Navbar.tsx  PlatformCard.tsx  StatusBadge.tsx  SummaryStats.tsx
frontend/src/hooks/: useBalanceData.ts
frontend/src/types/: index.ts
src/: main.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py  manager.py  models.py
src/providers/: __init__.py  base.py  bfl.py  manual.py  minimax.py  openrouter.py  volcengine.py
src/storage/: __init__.py  base.py  json_store.py
tests/: test_balance_system.py
